--- a/index.html
+++ b/index.html
@@ -5,7 +5,5 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/react/0.12.1/react.js"></script>
     <script type="text/jsx" src="script.js"></script>
   </head>
-  <body>
-    <div id="app"></div>
-  </body>
+  <body></body>
 </html>
